<resources>
    <string name="app_name">OldHabitsDieHard</string>
    <string name="today_s_habits">Today\'s Habits</string>
    <string name="today">Today</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="old_habits_die_hard">Old Habits Die Hard</string>
    <string name="account_created">Account Created!</string>
    <string name="habits">Habits</string>
    <string name="habits_u"><u>Habits</u></string>
    <string name="habit_events">Habit Events</string>
    <string name="create_profile">Create Profile</string>
    <string name="enter_username">Enter Username</string>
    <string name="back_to_sign_in"><u>Back to Sign In</u></string>
    <string name="followers">Followers</string>
    <string name="my_habits">My Habits</string>
    <string name="my_habit_events">My Habit Events</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="following_u"><u>Following</u></string>
    <string name="follower_u"><u>Followers</u></string>
    <string name="follow_requests"><u>Follow Requests</u></string>
    <string name="no_follow_requests">No Follow Requests</string>
    <string name="search_result"><u>Search Result</u></string>
    <string name="search">Search</string>
    <string name="public_habits"><u>Public Habits</u></string>

</resources>