<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_today"
        android:enabled="true"
        android:title="@string/today"
        android:icon="@drawable/ic_today"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_habits"
        android:enabled="true"
        android:icon="@drawable/ic_habit"
        android:title="@string/habits"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_events"
        android:enabled="true"
        android:icon="@drawable/ic_event"
        android:title="@string/events"
        app:showAsAction="withText"
    />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="withText" />


</menu>