<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/input_fields_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="50sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:paddingHorizontal="10sp"
        />
    <ImageView
        android:id="@+id/loop_logo"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/logo"
        />
    <TextView
        android:id="@+id/oldHabits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:text="@string/old_habits_die_hard"
        android:textSize="23sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColorHint="@color/blueLight"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_username"
            app:startIconTint="@color/pink"
            >
            <EditText
                android:id="@+id/username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:layout_marginBottom="20sp"
                android:drawableLeft="@drawable/ic_username"
                android:hint="Enter username"
                android:inputType="text"
                android:textColorHint="@color/blueLight"
                android:textColor="@color/blueLight"
                android:textSize="20sp"
                 />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColorHint="@color/blueLight"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/pink"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/pink"
            >
            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:layout_marginBottom="20sp"
                android:hint="Enter password"
                android:inputType="textPassword"
                android:textColor="@color/blueLight"
                android:textSize="20sp"
                 />
        </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:backgroundTint="@color/pink"
        android:textColor="@color/blue"

        app:layout_constraintHorizontal_bias="0.95"/>

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_profile"
        android:backgroundTint="@color/pink"
        android:textColor="@color/blue"
        />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>