<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/profile_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        >

        <LinearLayout
            android:id="@+id/profile_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="30sp"
                android:text=""
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0sp"
                android:layout_marginRight="10sp"
                android:backgroundTint="@color/pink"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:layout_weight="1"
                android:text="Log Out"
                android:textColor="@color/blue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:theme="@style/MyButtonStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:text="Edit Profile"
                android:textColor="@color/blue"
                android:textSize="15sp"
                android:textStyle="bold"
                android:theme="@style/MyButtonStyle"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:layout_weight="1"
                android:layout_marginRight="10sp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_username"
            android:minWidth="150sp"
            android:minHeight="150sp"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/pink" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal|center_vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:paddingHorizontal="2dp">
                <LinearLayout
                    android:id="@+id/followers_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5sp"
                    android:layout_marginRight="10sp"
                    android:clickable="true"
                    android:focusable="true">
                    <TextView
                        android:id="@+id/profile_followers_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="100"
                        android:textSize="15sp"
                        android:textColor="@color/blue"
                        android:focusable="false"
                        app:layout_constraintStart_toEndOf = "@id/profile_icon"/>
                    <TextView
                        android:id="@+id/profile_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/followers"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/blue"
                        android:focusable="false"
                        app:layout_constraintStart_toEndOf = "@id/profile_icon"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/following_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5sp"
                    android:layout_marginRight="10sp"
                    android:clickable="true"
                    android:focusable="true">
                    <TextView
                        android:id="@+id/profile_following_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="100"
                        android:textSize="15sp"
                        android:textColor="@color/blue"
                        android:focusable="false"
                        app:layout_constraintStart_toEndOf = "@id/profile_icon"/>
                    <TextView
                        android:id="@+id/profile_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/following"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:textColor="@color/blue"
                        android:focusable="false"
                        app:layout_constraintStart_toEndOf = "@id/profile_followers"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/bio_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="17sp"
                android:paddingHorizontal="1dp"
                android:textColor="@color/blueLight"
                android:layout_gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="20sp"
        android:layout_marginLeft="20sp"
        android:background="@color/pinkLight"
        app:layout_constraintTop_toBottomOf="@id/header"/>

        <TextView
            android:id="@+id/following_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/follow_requests"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"/>
    <TextView
        android:id="@+id/no_following_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/no_follow_requests"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/following_title"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <ListView
            android:id="@+id/follow_request_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/blue"
        app:itemIconTint="@color/beige"
        app:itemTextColor="@color/beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_navigation_main"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>